添加boss和boss子弹

--- a/飞机大战/飞机大战/Form1.resx
+++ b/飞机大战/飞机大战/Form1.resx
@@ -132,4 +132,19 @@
   <metadata name="CreateEnemyPlane2Shell.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>1102, 17</value>
   </metadata>
+  <metadata name="CreateBoss1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>1463, 17</value>
+  </metadata>
+  <metadata name="CreateBoss1Shell.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>1681, 17</value>
+  </metadata>
+  <metadata name="CreateBoss2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>1962, 14</value>
+  </metadata>
+  <metadata name="CreateBoss2Shell.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>217, 10</value>
+  </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>214</value>
+  </metadata>
 </root>
