--- a/飞机大战/飞机大战/Properties/Resources.resx
+++ b/飞机大战/飞机大战/Properties/Resources.resx
@@ -151,6 +151,9 @@
   <data name="littleboss2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\littleboss2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="littleboss2bullet" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\littleboss2bullet.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="plane" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\plane.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
